# location_intelligence_embedded

./: .gitignore  README.md  arm-none-eabi.toolchain.cmake
(sample)demo_nearby_interaction/src/: TLV_Mng.c
SDK_2_6_16_QN9090/: QN9090_manifest_v3_4.xml  QN9090_manifest_v3_5.xml  SW-Content-Register.txt
SDK_2_6_16_QN9090/devices/QN9090/: QN9090.xml
UWB_firmware_project/: CMakeLists.txt  project_config_defines.h
UWB_firmware_project/app/: callback.c  callback.h  main.c
UWB_firmware_project/linker/: your_board.ld
boards/Rhodes4_SPI/: QN9090_UWB_TAG_FW.ld  board.h
build_uwb_firmware/: CMakeCache.txt  Makefile  cmake_install.cmake
docs 2/MCUXpresso SDK API Reference Manual_QN9090/: arch.html  dir_06bd7257c72f67ee1e114b901de1821f.html  dir_129065406e474f9edced8c80f63af93a.html  dir_1412560dcb82b6b162f033dee58627ed.html  dir_16b1ddd9c5358085f435ea9bbda346fa.html  dir_1feb87f30c1784f5b23e9dc07ac947e7.html  dir_205d90a4941fc80ee34ad0a72619a6a7.html  dir_224a3574c390dd357fc3023e086b41ae.html  dir_27e1950df5459197ecba7eed91489e0e.html  dir_2a82a31d09f663040a3e9150ea062022.html  dir_2e35259473b3ce829e364ec9ae7dda6b.html  dir_2e6d1907a034bdc510f6cf3a24c00610.html  dir_378ab7cbbecbe91a4a751dd5b602a10f.html  dir_5701dc4d2d3a586ce6e52751c4014266.html  dir_57e57676ad50a5ea9cbd747bffa88ce9.html  dir_64926c5434015a4dcec16ab7e234fbcb.html  dir_70f2ccefe244d3245064f781f6e93bef.html  dir_74b9667dbf73f1ad87e657d0f2e028aa.html  dir_7643f0fdc4e9296dc9031e53fb4b567f.html  dir_76b8ec4c9cdbd9faec74d6954381b2ab.html  dir_79935f9fc81d1b31b5237b8ec9a81e4d.html  dir_7d7c0af03c7f0a48cd491a0fbaea3771.html  dir_94aea9a0676b8731db97397415737956.html  dir_99d33357f086b363ba94744b0bafb31b.html  dir_9a12911e12d4f1e2c9525c96489582a2.html  dir_9bba693d243b6012d9f3d8cef2b527f2.html  dir_ac310469cebb826a4db7b48ad0da37e4.html  dir_c990dce03683e221724f38ff6b5ce5f4.html  dir_c9f0df46fbb417da684dee676515c8ba.html  dir_cbe03fc81870a81da60766110b8fe0c9.html  dir_ce58425e9d1f5094a44cb13ea610d82e.html  dir_cea3e2ab6c6ee6a3fe532ee5cc6d7418.html  dir_d57a33b8cba3f6cf7cc6566fbbb8c6ee.html  dir_e3c9433da94f467289b20118a6f3ed41.html  dir_ecac86c1e0fb579398095762e6b51221.html  dir_ee7556c35e75eb1416f7b6799b912799.html  dir_f79e53944744b31430c7eaec90db6e87.html  dir_fb102185c26fe0a2fc3bfc06fdd3acd1.html  dir_fece257b15541a8d5029f7926e32b836.html  drv_err.html  (+113 more)
docs 2/MCUXpresso SDK API Reference Manual_QN9090/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_7a.js  classes_5f.js  classes_62.js  classes_63.js  classes_64.js  classes_66.js  classes_69.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_70.js  classes_73.js  enums_5f.js  enums_61.js  enums_63.js  enums_66.js  enums_69.js  (+77 more)
libs/halimpl/hal/: phNxpUciHal.c  phNxpUciHal_ext.c
libs/halimpl/inc/: uwbiot_ver.h
libs/halimpl/log/: nxLog.c
libs/halimpl/tml/: phTmlUwb_transport.c
libs/uci-core/inc/: uci_defs.h
libs/uci-core/src/: uwa_dm_act.c  uwa_dm_api.c  uwa_dm_main.c
libs/uwb-iot/uwb_api/Api/: UwbApi_Internal.c  UwbApi_Utility.c
uwb-iot/uwb_api/Api/: UwbApi.c  UwbApi_Types.h
uwb-iot/uwb_api/Api/SR1XX/: UwbApi_Proprietary_Internal.c
uwb-iot/uwb_core/adaptation/: UwbAdaptation.c
uwb-iot/uwb_core/include/: uwb_target.h
uwbiot-top/boards/Host/Rhodes4/: UWB_DeviceConfig_SR1XX.h
uwbiot-top/demos/SR1XX/demo_csa_controlee/: demo_csa_controlee.c
uwbiot-top/demos/SR1XX/demo_ranging_controlee/: demo_ranging_controlee.c
uwbiot-top/demos/SR1XX/demo_ranging_controller/: demo_ranging_controller.c
uwbiot-top/demos/SR1XX/demo_ultdoa_anchor/: demo_ultdoa_anchor.c
uwbiot-top/demos/common/: AppCallbacks.c  Demo_Common_Config.c
uwbiot-top/demos/mctt_pctt/Mctt_Test_App/: Mctt_demo_adv_SR150.py  Mctt_demo_obs_SR100T.py
uwbiot-top/demos/vcom_common/: UwbHif.c  UwbHif.h  usart_vcom_qn9090.c
uwbiot-top/docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
uwbiot-top/docs/_static/: documentation_options.js
uwbiot-top/docs/binaries/Armado/: readme.html
uwbiot-top/docs/binaries/Crete/: readme.html
uwbiot-top/docs/binaries/QN9090_MK_SHIELD_V4/: README.html
uwbiot-top/docs/binaries/QN9090_MK_SHIELD_V4_SE/: README.html
uwbiot-top/docs/binaries/Rhodes3/: README.html
uwbiot-top/docs/binaries/Rhodes4/: README.html
uwbiot-top/docs/binaries/Rhodes4_SE/: README.html
uwbiot-top/docs/binaries/SE051W/: README.html
uwbiot-top/docs/demos/Standalone_CDC_TestFramework/: readme.html
uwbiot-top/docs/demos/mctt_pctt/: readme.html
uwbiot-top/docs/demos/se_vcom/: readme.html
uwbiot-top/docs/docs/src/: toc-sr150.html
uwbiot-top/docs/project/Crete/: sr2xx-readme.html
uwbiot-top/docs/project/Nrf52840_SR1XX/: readme.html
uwbiot-top/docs/project/RhodesV4_SE/: sr1xx-readme.html
uwbiot-top/docs/project/RhodesV4_SE_Radar/: sr1xx-readme.html
uwbiot-top/docs/project/RhodesV4_SN/: sr1xx-readme.html
uwbiot-top/docs/scripts/: cmake_options.html
uwbiot-top/libs/halimpl/inc/: uwb_logging.h
uwbiot-top/my_custom_app/src/: my_app_main.c
uwbiot-top/project/RhodesV4_SE/: .cproject  .project  UWBIOT_APP_BUILD.h
(+1138 files in other folders)
